--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,4 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url("./component/assets/andre-francois-mckenzie-vBYVj-yycwQ-unsplash.jpg");
+  background-position: 50%;
+  background-repeat: no-repeat;
+  height: 100%;
+  background-size: cover;
 }
