--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url("./component/assets/andre-francois-mckenzie-vBYVj-yycwQ-unsplash.jpg");
+  background-image: url("./component/assets/micheile-henderson-lZ_4nPFKcV8-unsplash\ \(1\).jpg");
   background-position: 50%;
   background-repeat: no-repeat;
   height: 100%;
