--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@ body {
   background-image: url("./component/assets/micheile-henderson-lZ_4nPFKcV8-unsplash\ \(1\).jpg");
   background-position: 50%;
   background-repeat: no-repeat;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   background-size: cover;
 }
