--- a/client/src/pages/BudGet.css
+++ b/client/src/pages/BudGet.css
@@ -1,8 +1,6 @@
 .landingPageContainer {
     min-height: 100vh;
 }
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
-
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
@@ -23,33 +21,36 @@ body {
 }
 
 .container {
-  margin: 30px auto;
+  margin: 20px auto;
   width: 350px;
 }
 
-h1 {
+h2 {
   letter-spacing: 1px;
   margin: 0;
+  color: #2ecc71;
+  text-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
 }
 
 h3 {
   border-bottom: 1px solid #bbb;
   padding-bottom: 10px;
-  margin: 40px 0 10px;
+  margin: 10px 0 10px;
 }
 
 h4 {
   margin: 0;
-  text-transform: uppercase;
+  text-transform: "";
+  color: rgb(52, 43, 226);
 }
 
 .inc-exp-container {
   background-color: #fff;
   box-shadow: var(--box-shadow);
-  padding: 20px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 .inc-exp-container > div {
@@ -78,6 +79,7 @@ h4 {
 label {
   display: inline-block;
   margin: 10px 0;
+
 }
 
 input[type='text'],
@@ -86,9 +88,10 @@ input[type='number'] {
   border-radius: 2px;
   display: block;
   font-size: 16px;
-  padding: 10px;
+  padding: 1px;
   width: 100%;
 }
+
 
 .btn {
   cursor: pointer;
@@ -99,7 +102,7 @@ input[type='number'] {
   display: block;
   font-size: 16px;
   margin: 10px 0 30px;
-  padding: 10px;
+  padding: 1px;
   width: 100%;
 }
 
@@ -111,7 +114,7 @@ input[type='number'] {
 .list {
   list-style-type: none;
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .list li {
@@ -121,7 +124,7 @@ input[type='number'] {
   display: flex;
   justify-content: space-between;
   position: relative;
-  padding: 10px;
+  padding: 1px;
   margin: 10px 0;
 }
 
@@ -140,7 +143,7 @@ input[type='number'] {
   color: #fff;
   font-size: 20px;
   line-height: 20px;
-  padding: 2px 5px;
+  padding: 1px 5px;
   position: absolute;
   top: 50%;
   left: 0;
