--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+.stocks {text-align: left;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
